# csprimer

networking/dns-client/: Cargo.toml
networking/dns-client/src/: main.rs
networking/http-header-server/: Cargo.toml
networking/http-header-server/src/: main.rs
networking/proxy/: Cargo.toml
networking/proxy/src/: main.rs
networking/shout-server/: Cargo.toml
networking/shout-server/src/: main.rs
systems/beep-beep-boop/: Cargo.toml
systems/beep-beep-boop/src/: main.rs
systems/image-rotate/: Cargo.toml
systems/image-rotate/src/: main.rs
systems/varint/: Cargo.toml
systems/varint/src/: lib.rs
