[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
tokio = { version = "1.35.0", features = ["io-std", "full"] }
